Update surefire mem options to see if that can get hudson working without mavenopts
git-svn-id: https://svn.apache.org/repos/asf/tuscany/sca-java-2.x/trunk@932331 13f79535-47bb-0310-9956-ffa450edef68